--- a/src/app.css
+++ b/src/app.css
@@ -40,3 +40,64 @@ p {
 a {
   color: #000;
 }
+
+.iframe {
+  position: relative;
+  height: 0;
+  overflow: hidden;
+}
+
+.iframe__16x9 {
+  padding-bottom: 56.25%;
+}
+
+.iframe iframe {
+  position: absolute;
+  top:0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.no-shadow { 
+  box-shadow: none !important;
+  margin-top: 3.2rem;
+}
+
+.dual-image-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  width: 100%;
+}
+
+.dual-image-container__img {
+  width: 100%;
+  margin-bottom: 2.4rem;
+}
+
+.mb-sm {
+  margin-bottom: 2.4rem !important;
+}
+
+.img-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(28rem, 1fr));
+  grid-gap: 1.6rem;
+  align-items: stretch;
+  margin-bottom: 3.2rem;
+}
+
+.img-grid__img {
+  object-fit: cover !important;
+  width: 100%;
+  max-height: 32rem;
+}
+
+@media (min-width: 45em) {
+  .dual-image-container__img {
+    width: 49% !important;
+  }
+}
