--- a/src/styles/layout/home.scss
+++ b/src/styles/layout/home.scss
@@ -18,6 +18,7 @@
 
   &__title {
     font-size: 8rem;
+    line-height: 1.15;
     font-weight: 600;
     text-transform: uppercase;
     margin: 0;
@@ -34,6 +35,7 @@
   &__subtitle {
     font-size: 2.4rem;
     font-weight: 400;
+    margin-top: 2.4rem;
 
     & > span {
       text-decoration: line-through;
